--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:id="@+id/profileBg"
+    android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layoutDirection="rtl"
-    android:background="@drawable/side_nav_bar"
-    android:id="@+id/profileBg"
-    >
 
+    android:orientation="horizontal">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="35dp"
-
-        android:layout_gravity="center"
-
-        android:layout_margin="5dp"
-
-        >
     <ImageView
-        android:id="@+id/ph_profilePic"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/pic"
+        android:id="@+id/profile_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/side_nav_bar"
         />
-    </androidx.cardview.widget.CardView>
-    <TextView
-        android:id="@+id/ph_name"
-        android:layout_width="wrap_content"
-        android:textDirection="rtl"
-        android:layout_height="wrap_content"
-        android:text="name mc nameson"
-        android:textSize="20dp"
-        android:padding="10dp"
-        android:layout_gravity="center"
-        />
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:layout_margin="5dp"
+
+            app:cardCornerRadius="35dp"
+
+            >
+
+            <ImageView
+                android:id="@+id/ph_profilePic"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/pic" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/ph_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="name mc nameson"
+            android:textDirection="rtl"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+</FrameLayout>
