--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -58,9 +58,9 @@
 
 <!--    <fragment-->
 <!--        android:id="@+id/nav_share"-->
-<!--        android:name="com.example.blog.ui.share.ShareFragment"-->
+<!--        android:name="com.example.blog.ui.share.ProfileFragment"-->
 <!--        android:label="@string/menu_share"-->
-<!--        tools:layout="@layout/fragment_share" />-->
+<!--        tools:layout="@layout/fragment_profile" />-->
 
     <activity
         android:id="@+id/nav_register"
