--- a/app/src/main/res/layout/comment_bar.xml
+++ b/app/src/main/res/layout/comment_bar.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_button"
         android:padding="10dp"
+        android:maxHeight="80dp"
         android:fontFamily="@font/myfont"
         android:hint="اضافة تعليق"
         android:layout_margin="5dp"
