--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -110,6 +110,7 @@
             >
 
             <LinearLayout
+                android:id="@+id/post_catLL"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
