--- a/app/src/main/res/layout/comment_single_item.xml
+++ b/app/src/main/res/layout/comment_single_item.xml
@@ -7,12 +7,15 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
+    app:cardCornerRadius="30dp"
+
     app:cardBackgroundColor="#DDDDDD">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/commenterName"
