--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/commentsLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/bg_round_corner"
+    app:layout_constraintCircleRadius="533dp"
     android:orientation="vertical">
 
+    <FrameLayout
 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:paddingTop="5dp"
+            android:paddingRight="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="التعليقات:"
+            android:fontFamily="@font/myfont"
+            android:textSize="26sp"
+            android:textDirection="rtl"
+            android:layout_gravity="right"
+            />
+    </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/comments_recycler_view"
         android:layout_width="match_parent"
@@ -26,6 +45,14 @@
         android:id="@+id/commentBarFrame"
         android:name="com.example.commentBarFrame"
         />
+
+<!--    <fragment-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/commentBar"-->
+<!--        android:name="com.example.blog.ui.comments.CommentBarFragment"-->
+
+<!--        />-->
 
 
 </LinearLayout>
