--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="8dp"
+
 
     >
     <LinearLayout
@@ -112,21 +112,29 @@
             <LinearLayout
                 android:id="@+id/post_catLL"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="right"
 
                 >
 
                 <Button
-                    android:layout_width="50dp"
-                    android:layout_height="23dp"
-                    android:background="@drawable/bg_button"
-                    android:text="cat"
+                    android:id="@+id/tagBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:background="@drawable/bg_button_tag"
+                    android:text="@string/menu_categories"
                     android:textSize="14sp"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
                     android:textStyle="italic"
                     android:layout_marginRight="5dp"
                     />
+                <TextView
+                    android:id="@+id/tagId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
 
 
 
