--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -11,7 +11,7 @@ android:id="@+id/catRelativeLayout"
         android:id="@+id/categories_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+       android:layout_margin="5dp"
 
         >
 
