--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profileBg"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     android:layoutDirection="rtl"
 
     android:orientation="horizontal">
@@ -12,13 +12,14 @@
     <ImageView
         android:id="@+id/profile_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/side_nav_bar"
+        android:layout_height="80dp"
+        android:background="#4C776F"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -44,7 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="#fff"
+            android:fontFamily="@font/myfont"
+            android:background="@drawable/bg_text_overlay"
             android:text="name mc nameson"
             android:textDirection="rtl"
             android:textSize="20dp" />
