--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -63,7 +63,7 @@
 <!--        android:id="@+id/nav_share"-->
 <!--        android:name="com.example.blog.ui.share.ProfileFragment"-->
 <!--        android:label="@string/menu_share"-->
-<!--        tools:layout="@layout/fragment_profile" />-->
+<!--        tools:layout="@layout/activity_profile" />-->
 
     <activity
         android:id="@+id/nav_register"
@@ -92,6 +92,14 @@
         android:name="com.example.blog.ui.home.ExpandedPostFragment"
         android:label=""
         tools:layout="@layout/expanded_post"/>
+
+
+    <activity
+        android:id="@+id/nav_profile"
+        android:name="com.example.blog.ProfileActivity"
+        />
+
+
 <!--    <fragment-->
 <!--        android:id="@+id/nav_send"-->
 <!--        android:name="com.example.blog.ui.send.SendFragment"-->
