--- a/app/src/main/res/layout/dialog_comments_fragment.xml
+++ b/app/src/main/res/layout/dialog_comments_fragment.xml
@@ -2,12 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <fragment
+<!--   <fragment-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="match_parent"-->
+<!--       android:name="com.example.blog.ui.comments.CommentsFragment"-->
+<!--       class="com.example.blog.ui.comments.CommentsFragment"-->
+
+<!--       android:id="@+id/dialog_fragment"-->
+<!--       />-->
+
+   <FrameLayout
+       android:id="@+id/dialogFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:name="com.example.blog.ui.comments.CommentsFragment"
-       class="com.example.blog.ui.comments.CommentsFragment"
+       android:layout_weight="1"
 
-       android:id="@+id/dialog_fragment"
+      />
+
+   <FrameLayout
+       android:id="@+id/dialogCommentBarFrame"
+       android:layout_width="match_parent"
+       android:layout_height="130dp"
+       android:layout_weight="1"
+
        />
 </LinearLayout>
