--- a/app/src/main/res/layout/expanded_post.xml
+++ b/app/src/main/res/layout/expanded_post.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView_post"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_above="@+id/commentBarFrame"
