--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -34,9 +34,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
+                android:layout_gravity="center"
                 android:padding="10dp"
                 android:drawablePadding="5dp"
-                android:drawableLeft="@drawable/ic_date_range_black_24dp"
+                android:drawableRight="@drawable/ic_date_range_black_24dp"
                 />
         <TextView
             android:padding="10dp"
@@ -119,7 +120,7 @@
                 >
 
                 <Button
-                    android:id="@+id/tagBtn"
+                    android:id="@+id/catBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:background="@drawable/bg_button_tag"
@@ -131,7 +132,7 @@
                     android:layout_marginRight="5dp"
                     />
                 <TextView
-                    android:id="@+id/tagId"
+                    android:id="@+id/cat_Id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"/>
