--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/profile_background"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="#4C776F"
+        android:background="#3E4141"
         />
 
     <LinearLayout
@@ -37,7 +37,8 @@
                 android:id="@+id/ph_profilePic"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/pic" />
+                android:src="@drawable/default_profile_pic"
+                />
         </androidx.cardview.widget.CardView>
 
         <TextView
