--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,5 +23,9 @@
 <!--            android:background="@drawable/aqlamdefault"-->
 <!--            />-->
 
+        <FrameLayout
+            android:id="@+id/myPosts_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
