--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@id/user_name"
-        android:inputType="textEmailAddress"
+        android:inputType="textPersonName"
         android:hint="الاسم الظاهر"
         android:fontFamily="@font/myfont"
         android:textDirection="rtl"
