--- a/app/src/main/res/layout/comment_bar.xml
+++ b/app/src/main/res/layout/comment_bar.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1.5"
         android:background="@drawable/ic_menu_send"
         android:padding="5dp"
-
+        android:layout_gravity="center"
 
         />
     <com.google.android.material.textfield.TextInputEditText
@@ -26,6 +26,7 @@
         android:hint="اضافة تعليق"
         android:layout_margin="5dp"
         android:layout_weight="1"
+
 
         />
 
