--- a/app/src/main/res/layout/full_post.xml
+++ b/app/src/main/res/layout/full_post.xml
@@ -116,6 +116,7 @@
                 >
 
                 <Button
+                    android:id="@+id/catBtn"
                     android:layout_width="50dp"
                     android:layout_height="23dp"
                     android:background="@drawable/bg_button"
