--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -46,8 +46,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:layout_margin="10dp"
             android:textColor="#fff"
             android:fontFamily="@font/myfont"
             android:background="@drawable/bg_text_overlay"
