--- a/app/src/main/res/layout/create_post.xml
+++ b/app/src/main/res/layout/create_post.xml
@@ -21,17 +21,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/goBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_button2"
-                android:fontFamily="@font/myfont"
-                android:text="رجوع"
-                android:textSize="24dp"
-                android:padding="10dp"
-               android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
-                />
+<!--            <Button-->
+<!--                android:id="@+id/goBack"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/bg_button2"-->
+<!--                android:fontFamily="@font/myfont"-->
+<!--                android:text="رجوع"-->
+<!--                android:textSize="24dp"-->
+<!--                android:padding="10dp"-->
+<!--               android:drawableLeft="@drawable/ic_arrow_back_black_24dp"-->
+<!--                />-->
             <Button
                 android:id="@+id/addCatBtn"
                 android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
                 android:textAlignment="center"
                 android:fontFamily="@font/myfont"
                 android:gravity="right|center"
-                android:textSize="24dp"
+                android:textSize="16dp"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_expand_more_black_24dp"
                 />
@@ -59,7 +59,7 @@
             android:text="ارسال"
             android:drawableRight="@drawable/ic_menu_send"
             android:drawablePadding="10dp"
-            android:textSize="24dp"
+            android:textSize="16dp"
            />
         </LinearLayout>
 
