--- a/app/src/main/res/layout/dialog_comments_fragment.xml
+++ b/app/src/main/res/layout/dialog_comments_fragment.xml
@@ -5,8 +5,8 @@
 <!--   <fragment-->
 <!--       android:layout_width="match_parent"-->
 <!--       android:layout_height="match_parent"-->
-<!--       android:name="com.example.blog.ui.comments.CommentsFragment"-->
-<!--       class="com.example.blog.ui.comments.CommentsFragment"-->
+<!--       android:name="com.example.blog.controller.ui.comments.CommentsFragment"-->
+<!--       class="com.example.blog.controller.ui.comments.CommentsFragment"-->
 
 <!--       android:id="@+id/dialog_fragment"-->
 <!--       />-->
