--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -52,7 +52,7 @@
             android:textColor="#fff"
             android:fontFamily="@font/myfont"
             android:background="@drawable/bg_text_overlay"
-            android:text="name mc nameson"
+            android:text="اسم المستخدم"
             android:textDirection="rtl"
             android:textSize="20dp" />
 
