--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -14,16 +14,21 @@
         android:layout_height="wrap_content"
         >
 
+
         <TextView
+            android:id="@+id/comment_refresh"
             android:paddingTop="5dp"
             android:paddingRight="22dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="التعليقات:"
             android:fontFamily="@font/myfont"
             android:textSize="26sp"
             android:textDirection="rtl"
             android:layout_gravity="right"
+
+            android:paddingLeft="14dp"
+            android:drawableLeft="@drawable/ic_refresh_black_24dp"
             />
     </FrameLayout>
 
