--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/profile_background"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="#3E4141"
+        android:background="@color/grayBackground"
         />
 
     <LinearLayout
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:padding="10dp"
+            android:padding="5dp"
             android:layout_margin="10dp"
             android:textColor="#fff"
             android:fontFamily="@font/myfont"
