--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,7 @@
 
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar2"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
@@ -42,6 +43,7 @@
 
         </androidx.appcompat.widget.Toolbar>
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/grayBackground"
@@ -89,6 +91,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
