--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/postsRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <fragment
+                android:id="@+id/dropdownFragment_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:name="com.example.blog.controller.ui.category.CatDropDownFragment"
+                tools:layout="@layout/cat_dropdown_menu"
+                android:layout_weight="1"/>
+    <Button
+        android:id="@+id/sortBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_button2"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/latest"
+        android:textAlignment="center"
+        android:fontFamily="@font/myfont"
+       android:layout_weight="0"
+        android:textSize="16dp"
+        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
+        android:layout_gravity="right"
+        />
 
+        </LinearLayout>
 
     <TextView
         android:id="@+id/homeErrorTextView"
@@ -36,5 +69,5 @@
 
     </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    </LinearLayout>
 </RelativeLayout>
