--- a/app/src/main/res/layout/profile_post_single_item.xml
+++ b/app/src/main/res/layout/profile_post_single_item.xml
@@ -126,6 +126,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layoutDirection="rtl"
+                android:layout_marginTop="10dp"
                 >
 
 
@@ -136,6 +137,7 @@
                     android:background="@drawable/bg_button_tag"
                     android:text="@string/menu_categories"
                     android:textSize="14sp"
+                    android:layout_marginTop="10dp"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
                     android:textStyle="italic"
