--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
-            android:background="@color/grayBackground"
+            android:background="@drawable/bg_gradiant"
             >
 
 
@@ -46,7 +46,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/grayBackground"
+            android:background="@color/gradiant_end"
 
             >
 
