--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/profile_background"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/grayBackground"
+        android:background="@drawable/bg_gradiant"
         />
 
     <LinearLayout
