--- a/app/src/main/res/layout/create_post.xml
+++ b/app/src/main/res/layout/create_post.xml
@@ -101,7 +101,7 @@
             android:layout_marginBottom="10dp"
            >
 
-            <androidx.core.widget.NestedScrollView
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fillViewport="true">
@@ -119,6 +119,8 @@
                         android:hint="التفاصيل"
                         android:padding="10dp"
                         android:gravity="top"
+
+                        android:maxHeight="350dp"
                         android:background="@drawable/bg_edittext"
                         android:textSize="25dp"
                         android:minHeight="300dp"
@@ -126,7 +128,7 @@
 
 
                 </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
+            </ScrollView>
 
 
 
@@ -140,11 +142,14 @@
 <!--            />-->
         <Button
             android:id="@+id/getImgFromGallary"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@drawable/bg_button2"
-            android:text="upload image from galary"
+            android:background="@drawable/bg_button3"
+            android:text="اختيار صورة"
+            android:drawablePadding="10dp"
+            android:drawableLeft="@drawable/ic_menu_gallery"
+            android:layout_gravity="center"
             />
         <FrameLayout
             android:id="@+id/imgFrame"
