--- a/app/src/main/res/layout/full_post.xml
+++ b/app/src/main/res/layout/full_post.xml
@@ -27,26 +27,34 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:paddingTop="5dp">
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:padding="10dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="5dp"
                 android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_date_range_black_24dp"
                 />
+                <View
+                    android:id="@+id/divider4"
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:background="?android:attr/listDivider" />
                 <TextView
                     android:id="@+id/viewsCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+
                     android:text="views"
                     android:drawablePadding="5dp"
                     android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
