--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -28,17 +28,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:layout_gravity="center"
-                android:padding="10dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
                 android:drawablePadding="5dp"
-                android:drawableRight="@drawable/ic_date_range_black_24dp"
+                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                 />
         <TextView
             android:padding="10dp"
@@ -98,40 +98,42 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:visibility="gone"
+            android:layout_marginBottom="5dp"
             />
         <View
             android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
             android:padding="10dp"/>
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            >
+<!--        <HorizontalScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="5dp"-->
+<!--            >-->
 
-            <LinearLayout
-                android:id="@+id/post_catLL"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="right"
+<!--            <LinearLayout-->
+<!--                android:id="@+id/post_catLL"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_gravity="right"-->
 
-                >
+<!--                >-->
 
-                <Button
-                    android:id="@+id/catBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:background="@drawable/bg_button_tag"
-                    android:text="@string/menu_categories"
-                    android:textSize="14sp"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp"
-                    android:textStyle="italic"
-                    android:layout_marginRight="5dp"
-                    />
+<!--                <Button-->
+<!--                    android:id="@+id/catBtn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:background="@drawable/bg_button_tag"-->
+<!--                    android:text="@string/menu_categories"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:paddingRight="10dp"-->
+<!--                    android:paddingLeft="10dp"-->
+<!--                    android:textStyle="italic"-->
+<!--                    android:layout_marginRight="5dp"-->
+<!--                    />-->
                 <TextView
                     android:id="@+id/cat_Id"
                     android:layout_width="wrap_content"
@@ -141,31 +143,31 @@
 
 
 
-            </LinearLayout>
-        </HorizontalScrollView>
-        <View
-            android:id="@+id/divider5"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            android:layout_margin="10dp"/>
+<!--            </LinearLayout>-->
+<!--        </HorizontalScrollView>-->
+<!--        <View-->
+<!--            android:id="@+id/divider5"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="1dp"-->
+<!--            android:background="?android:attr/listDivider"-->
+<!--            android:layout_margin="10dp"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
+            android:padding="5dp"
+            >
 
             <TextView
                 android:id="@+id/viewsCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginRight="5dp"
                 android:text="views"
                 android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
-
+                android:layout_weight="0"
                 android:textDirection="ltr"/>
 
             <View
@@ -180,11 +182,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="comments"
-                android:drawablePadding="5dp"
+                android:paddingLeft="10dp"
                 android:drawableLeft="@drawable/ic_comment_black_24dp"
-
                 android:textDirection="ltr"/>
+
+            <Button
+                android:id="@+id/catBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:background="@drawable/bg_button_tag"
+                android:text="@string/menu_categories"
+                android:textSize="14sp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                android:textStyle="italic"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0"
+                />
 
 
 
